--- a/about.html
+++ b/about.html
@@ -344,14 +344,10 @@
                         <div class="bg-gray-900 p-4 rounded-lg mb-6">
                             <!-- Input Aset & Tombol Generate -->
                             <div class="flex flex-col sm:flex-row gap-4 mb-4">
-                                <input type="text" id="proyeksi-asset-input" list="asset-list" class="kalkulator-input flex-grow" placeholder="Ketik atau pilih aset: BTCUSDT, ETHUSDT...">
+                                <input type="text" id="proyeksi-asset-input" list="asset-list" class="kalkulator-input flex-grow" placeholder="Ketik atau pilih aset..">
                                 <datalist id="asset-list">
                                     <option value="BTCUSDT">
                                     <option value="ETHUSDT">
-                                    <option value="SOLUSDT">
-                                    <option value="BNBUSDT">
-                                    <option value="XRPUSDT">
-                                    <option value="1000PEPEUSDT">
                                 </datalist>
                                 <button id="generate-proyeksi-btn" class="w-full sm:w-auto bg-green-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-700 transition">⏩️ ANALISA PROYEKSI</button>
                             </div>
@@ -556,7 +552,7 @@
   "locale": "en",
   "save_image": true,
   "style": "1",
-  "symbol": "BINANCE:BTCUSDT.P",
+  "symbol": "BINANCE:BTCUSDT",
   "theme": "dark",
   "timezone": "Etc/UTC",
   "backgroundColor": "#0F0F0F",
