--- a/index.html
+++ b/index.html
@@ -532,10 +532,10 @@ document.addEventListener('DOMContentLoaded', function () {
     const BINANCE_PUBLIC_API = 'https://fapi.binance.com';
     const ASSET_CONFIG = {
         'BTCUSDT': { ticker: 'BTCUSDT', precision: 2, quantityPrecision: 3 },
-        //'ETHUSDT': { ticker: 'ETHUSDT', precision: 2, quantityPrecision: 3 },
-        //'SOLUSDT': { ticker: 'SOLUSDT', precision: 2, quantityPrecision: 2 },
-        //'XRPUSDT': { ticker: 'XRPUSDT', precision: 4, quantityPrecision: 1 },
-        //'BNBUSDT': { ticker: 'BNBUSDT', precision: 3, quantityPrecision: 2 },
+        'ETHUSDT': { ticker: 'ETHUSDT', precision: 2, quantityPrecision: 3 },
+        'SOLUSDT': { ticker: 'SOLUSDT', precision: 2, quantityPrecision: 2 },
+        'XRPUSDT': { ticker: 'XRPUSDT', precision: 4, quantityPrecision: 1 },
+        'BNBUSDT': { ticker: 'BNBUSDT', precision: 3, quantityPrecision: 2 },
         //'PAXGUSDT': { ticker: 'PAXGUSDT', precision: 2, quantityPrecision: 3 },
         //'1000PEPEUSDT': { ticker: '1000PEPEUSDT', precision: 7, quantityPrecision: 0 }
     };
