--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ document.addEventListener('DOMContentLoaded', function () {
         'SOLUSDT': { ticker: 'SOLUSDT', precision: 2, quantityPrecision: 2 },
         'XRPUSDT': { ticker: 'XRPUSDT', precision: 4, quantityPrecision: 1 },
         'BNBUSDT': { ticker: 'BNBUSDT', precision: 3, quantityPrecision: 2 },
-        //'PAXGUSDT': { ticker: 'PAXGUSDT', precision: 2, quantityPrecision: 3 },
+        'PAXGUSDT': { ticker: 'PAXGUSDT', precision: 2, quantityPrecision: 3 },
         //'1000PEPEUSDT': { ticker: '1000PEPEUSDT', precision: 7, quantityPrecision: 0 }
     };
     
@@ -547,7 +547,7 @@ document.addEventListener('DOMContentLoaded', function () {
         '1h-15m': { kompas: '1h', eksekusi: '15m', label: '4H-1H-15M', htf: '4h' },
         '4h-15m': { kompas: '4h', eksekusi: '15m', label: '1D-4H-15M', htf: '1d' },
         '4h-1h': { kompas: '4h', eksekusi: '1h', label: '1D-4H-1H', htf: '1d' },
-        '1d-4h': { kompas: '1d', eksekusi: '4h', label: '1W-4H', htf: '1w' }
+        '1d-4h': { kompas: '1d', eksekusi: '4h', label: '1W-1D-4H', htf: '1w' }
         
     };
 
