--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
     
     <div class="absolute left-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300">
-            COPILOT
+            ANALYZER
         </a>
     </div>
 
@@ -142,7 +142,7 @@
 
     <div class="absolute right-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/services" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-regular py-2 px-4 rounded transition-colors duration-300">
-            BACKTEST
+            BTC HISTORY
         </a>
     </div>
 
