--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                         <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
                             <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
                             class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
-                                CHART AI
+                                PROJECTOR
                             </a>
                             
                             <a href="https://opixtm.github.io/Trade/services" target="_blank" rel="noopener noreferrer" 
                             class="btn-action bg-yellow-500 hover:bg-yellow-600 text-slate-900 font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
-                                BACKTEST
+                                BTC HISTORY
                             </a>
                         </div>
     </div>
