--- a/services.html
+++ b/services.html
@@ -119,8 +119,20 @@
         <nav class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
-                    <h1 class="text-xl font-bold">Dasbor Analisis Bitcoin</h1>
+                    <h1 class="text-xl font-bold">.  ......  ......  .  .Dasbor Analisis Bitcoin</h1>
                 </div>
+                <div class="absolute top-0 left-0 right-0 w-full">
+                        <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
+                            <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
+                            class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                                PROJECTOR
+                            </a>
+                            
+                            <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
+                            class="btn-action bg-yellow-500 hover:bg-yellow-600 text-slate-900 font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                                ANALYZER
+                            </a>
+                        </div>
                 <div class="hidden md:flex items-center space-x-4">
                     <a href="#ringkasan" class="nav-link px-3 py-2 rounded-md text-sm font-medium">Ringkasan</a>
                     <a href="#siklus" class="nav-link px-3 py-2 rounded-md text-sm font-medium">Siklus & Tren</a>
