--- a/services.html
+++ b/services.html
@@ -128,7 +128,7 @@
                                 PROJECTOR
                             </a>
                             
-                            <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
+                            <a href="https://opixtm.github.io/Trade/" target="_blank" rel="noopener noreferrer" 
                             class="btn-action bg-yellow-500 hover:bg-yellow-600 text-slate-900 font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
                                 ANALYZER
                             </a>
