--- a/services.html
+++ b/services.html
@@ -321,15 +321,15 @@
 
     <div class="top-header-full-width bg-gray-800/50 p-4 flex flex-col overflow-y-auto">
             <div class="header-top-wrapper">
-                <a href="https://opixtm.github.io/Trade/" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300 desktop-header-btn">
-                    PROJECTOR
+                <a href="https://opixtm.github.io/Trade/" target="_blank" class="bg-gray-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300 desktop-header-btn">
+                    BACK
                 </a>
                 <div class="header-title-wrapper">
                     <h1 class="text-2xl font-bold text-white whitespace-nowrap">Ensiklopedia Nur</h1>
                     <p class="text-sm text-emerald-400 whitespace-nowrap">v10.6 (MicroExpression)</p>
                 </div>
-                <a href="https://opixtm.github.io/Trade/about" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-regular py-2 px-4 rounded transition-colors duration-300 desktop-header-btn">
-                    ANALYZER
+                <a href="https://opixtm.github.io/Trade/about" target="_blank" class="bg-gray-500 hover:bg-yellow-600 text-gray-900 font-regular py-2 px-4 rounded transition-colors duration-300 desktop-header-btn">
+                    BACK
                 </a>
             </div>
 
