--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     
     <div class="absolute left-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300">
-            PROJECTOR
+            ANALYZER
         </a>
     </div>
 
