--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                             </div>
 
                             <!-- Loader dan Placeholder Awal -->
-                            <div id="proyeksi-placeholder" class="text-center text-blue-500 blinking-text-animation p-8"><p>FAST MODEL - Proses Lebih LAMBAT - Hasil Analisa LEBIH LENGKAP.</p></div>
+                            <div id="proyeksi-placeholder" class="text-center text-blue-500 blinking-text-animation p-8"><p>SLOW MODEL - Proses Lebih LAMBAT - Hasil Analisa LEBIH LENGKAP.</p></div>
                             <div id="proyeksi-loader" class="hidden absolute inset-0 bg-gray-900/80 flex items-center justify-center flex-col gap-2 z-50 rounded-lg">
                                  <div class="loader"></div>
                                  <p id="proyeksi-loader-text" class="text-white font-regular"></p>
