--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
         </a>
     </div>
 
-    <h1 class="text-2xl font-bold text-white">🚬<span class="text-blue-400">AI</span>📽️SFAST☕️</h1>
+    <h1 class="text-2xl font-bold text-white">🚬<span class="text-blue-400">AI</span>📽️FAST☕️</h1>
 
     <div class="absolute right-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/services" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-2 px-4 rounded transition-colors duration-300">
