--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <header class="bg-gray-800/50 backdrop-blur-sm shadow-lg p-4 top-0 z-20 h-16 relative flex items-center justify-center">
     
     <div class="absolute left-4 top-1/2 -translate-y-1/2">
-        <a href="https://opixtm.github.io/Trade/" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300">
-            SLOW MODE 🚀
+        <a href="https://opixtm.github.io/Trade/about" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300">
+            FAST MODE 🚀
         </a>
     </div>
 
