--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
     
     <div class="absolute left-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/about" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300">
-            ANALYZER
+            QUICK
         </a>
     </div>
 
-    <h1 class="text-base font-bold text-white">🚬<span class="text-blue-400">AI</span>📽️PRICE PROJECTOR☕️</h1>
+    <h1 class="text-sm font-bold text-blue">🚬<span class="text-blue-400">AI</span>PRICE PROJECTOR</h1>
 
     <div class="absolute right-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/services" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-2 px-4 rounded transition-colors duration-300">
