--- a/about.html
+++ b/about.html
@@ -110,8 +110,8 @@
 </head>
 <body class="antialiased">
     <div class="absolute left-4 top-1/2 -translate-y-1/2">
-        <a href="https://opixtm.github.io/Trade/about" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300">
-            QUICK
+        <a href="https://opixtm.github.io/Trade/" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-regular py-2 px-4 rounded transition-colors duration-300">
+            PROJECTOR
         </a>
     </div>
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
