--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                 </section>
                 <section id="top-movers-section" class="card p-6">
                     <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-base font-semibold">Top Movers | M.O. Scanner | Pump & Dump Strength</h2>
+                    <h2 class="text-base font-semibold">PD STRENGTH</h2>
                     <div id="top-movers-controls" class="flex gap-4 items-center">
                     <div id="top-movers-timeframe-selector" class="flex gap-2">
                     <button data-timeframe="5m" class="top-movers-tf-btn px-2 py-1 text-xs font-mono rounded-md">5m</button>
