--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                 <option value="futures" selected>Perp</option>
                             </select>
                             <select id="timeframe-select" class="input-primary text-sm !w-auto">
-                                <option value="1m">1m</option><option value="3m">3m</option><option value="5m">5m</option><option value="15m">15m</option><option value="30m">30m</option><option value="1h"selected>1h</option><option value="2h">2h</option><option value="4h">4h</option><option value="1d">1d</option><option value="1w">W</option>
+                                <option value="1m">1m</option><option value="3m">3m</option><option value="5m"selected>5m</option><option value="15m">15m</option><option value="30m">30m</option><option value="1h">1h</option><option value="2h">2h</option><option value="4h">4h</option><option value="1d">1d</option><option value="1w">W</option>
                             </select>
                         </div>
                     </div>
@@ -538,7 +538,7 @@
                 </section>
                 <section id="top-movers-section" class="card p-6">
                     <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-base font-semibold">PD STRENGTH</h2>
+                    <h2 class="text-base font-semibold">Pump & Dump Strength</h2>
                     <div id="top-movers-controls" class="flex gap-4 items-center">
                     <div id="top-movers-timeframe-selector" class="flex gap-2">
                     <button data-timeframe="5m" class="top-movers-tf-btn px-2 py-1 text-xs font-mono rounded-md">5m</button>
